1.2.5i4p2:
    Core & Setup:
    * 1053 FIX: Fixed events check always being reporting OK state...

    Multisite:
    * 1052 SEC: index start URL can not be used to redirect to absolute URLs anymore...


1.2.5i4p1:
    Core & Setup:
    * 1012 Fix quoting of backslashes in custom checks with nagios core...
            NOTE: Please refer to the migration notes!
    * 1035 FIX: Do not fail on errors in *.mk files anymore - except in interactive mode...

    Checks & Agents:
    * 0994 FIX: agent plugin smart: fixed syntax error
    * 0989 FIX: logwatch.ec: Fix forwarding multiple messages via syslog/TCP...
    * 0943 FIX: if.include: fixed incorrect traffic percentage values in the check output of if checks...
    * 1032 FIX: check_traceroute: Fix option Use DNS, worked vice versa
    * 0173 FIX: hitachi_hnas_volume: Fixed bug when snmp outputs empty lines
    * 1037 FIX: bintec_info: support bintec RXL12500
    * 0948 FIX: mk_inventory.ps1: increased caching time to 14400, fixed incorrect default cachefile path
    * 1043 FIX: printer_supply: fix value error in default parameters...

    Multisite:
    * 1036 FIX: doc/treasures/downtime: fix --url option, better error output

    WATO:
    * 0990 FIX: Fix HTTP error handling in bulk inventory...
    * 0947 FIX: WATO snapshots: fixed missing files on restoring nagvis backup domains
    * 1044 FIX: Remove icon for service parameters in WATO service list for missing services...

    Event Console:
    * 1040 FIX: Avoid sporadic errors when checking event state in Event Console...

    Livestatus:
    * 0988 FIX: livedump: Fix exception in case no contact groups are defined for a service

    HW/SW-Inventory:
    * 0946 FIX: hw/sw inventory: fixed display bug for byte fields with the value 0...


1.2.5i4:
    Core & Setup:
    * 0940 SEC: Fixed various core SIGSEGV when using malformed livestatus queries...

    Checks & Agents: