@@ -2,6 +2,9 @@
     Core & Setup:
     * 1053 FIX: Fixed events check always being reporting OK state...
 
+    Checks & Agents:
+    * 1072 FIX: printer_supply: fix colors of Perf-O-Meter on HP OfficeJet...
+
     Multisite:
     * 1052 SEC: index start URL can not be used to redirect to absolute URLs anymore...
 
